flicker fix

--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -3,6 +3,7 @@ html {
 }
 body {
     height: 100%;
+    margin-left: calc(100vw - 100%);
 }
 #root {
     min-height: 100%;
